--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -1,6 +1,7 @@
-.btn{
+.btn {
+
   &:link,
-  &:visited{
+  &:visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 1.5rem 4rem;
@@ -9,28 +10,41 @@
     transition: all .2s;
     position: relative;
   }
-  
-  &:hover{
+
+  &:hover {
     transform: translateY(-0.3rem);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,0.2);
-    &::after{
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+
+    &::after {
       transform: scaleX(1.4) scaleY(1.6);
       opacity: 0;
     }
   }
-  &:active{
+
+  &:active {
     transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   }
-  &--white{
+
+  &--white {
     background-color: $color-white;
     color: $color-grey-dark;
-    &::after{
+
+    &::after {
       background-color: $color-white;
     }
   }
 
-  &::after{
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
+  &::after {
     content: '';
     display: inline-block;
     width: 100%;
@@ -43,16 +57,17 @@
     transition: all 0.4s;
   }
 
-  &--animated{
+  &--animated {
     animation: moveInButton .5s ease-out .75s;
     animation-fill-mode: backwards;
   }
 }
 
 
-.btn-text{
+.btn-text {
+
   &:link,
-  &:visited{
+  &:visited {
     font-size: $default-font-size;
     color: $color-primary;
     text-decoration: none;
@@ -62,22 +77,15 @@
     transition: all .2s;
   }
 
-  &:hover{
+  &:hover {
     background-color: $color-primary;
     color: $color-white;
-    box-shadow: 0 1rem 2rem rgba($color-black,.15);
+    box-shadow: 0 1rem 2rem rgba($color-black, .15);
     transform: translateY(-2px);
   }
 
-  &:active{
-    box-shadow: 0 0.5rem 1rem rgba($color-black,.15);
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba($color-black, .15);
     transform: translateY(0);
   }
 }
-
-
-
-
-
-
-
