--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -1,5 +1,5 @@
 .btn {
-
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -9,9 +9,14 @@
     border-radius: 10rem;
     transition: all .2s;
     position: relative;
+
+    // Change for the <button> element
+    border:none;
+    cursor: pointer;
   }
 
-  &:hover {
+  &:hover,
+   {
     transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 
@@ -21,9 +26,11 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba($color-black ,0.2);
   }
 
   &--white {
