--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -1,31 +1,57 @@
-.section-about{
+.section-about {
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
 }
 
-.section-features{
+.section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(
-    to right, 
-    rgba($color-primary-light,0.8),
-    rgba($color-primary-dark,0.8)), 
+  background-image: linear-gradient(to right,
+    rgba($color-primary-light, 0.8),
+    rgba($color-primary-dark, 0.8)),
     url(../img/nat-4.jpg);
-    background-size: cover;
+  background-size: cover;
   margin-top: -10rem;
-  transform:skewY(-7deg); 
-  & > *{
-    transform:skewY(7deg); 
+  transform: skewY(-7deg);
+
+  &>* {
+    transform: skewY(7deg);
   }
 }
 
-.section-tours{
+.section-tours {
   background-color: $color-grey-light-1;
   padding: 25rem 0 10rem 0;
   margin-top: -10rem;
 }
 
-.section-stories{
+.section-stories {
   padding: 10rem 0;
-  background-color: $color-grey-light-1;
+  position: relative;
+}
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right,
+    $color-primary-light,
+    $color-primary-dark);
+}
+
+.book{
+  background-image: linear-gradient(
+    105deg,
+    rgba($color-white,.9) 0%,
+    rgba($color-white,.9)50%,
+    transparent 50%) ,
+     url(../img/nat-10.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+  height: 50rem;
+
+  &__form{
+    width: 50%;
+    padding: 6rem;
+  }
 }
